@@ -1,0 +1,4 @@
+This is sample text for a block. If you are the administrator please log in to view more information.
+
+Learn more about ImpressCMS:
+<ul><li>[url=http://www.impresscms.org]Project Home[/url]</li><li>[url=http://community.impresscms.org]ImpressCMS Community[/url]</li><li>[url=http://addons.impresscms.org]ImpressCMS Addons[/url]</li><li>[url=http://wiki.impresscms.org]ImpressCMS Wiki[/url]</li><li>[url=http://blog.impresscms.org]ImpressCMS Blog[/url]</li></ul>
