@@ -1,0 +1,14 @@
+Welcome to your new ImpressCMS powered website. If you haven't already please delete the [b]install[/b] folder from the server and ensure that [b]mainfile.php[/b] is not writable (chmod 444).
+
+To begin administering your new ImpressCMS powered website you can click the [b]Administration[/b] Menu link located on the left of this page.
+
+You may want to begin by editing your website [b]Preferences[/b]: In the admin panel, hover over the [b]System[/b] dropdown and select [b]Preferences.[/b]
+
+Afterwards you can begin adding [b]Modules[/b] and [b]Themes[/b].
+Many of the available modules and themes for ImpressCMS, are available at the [url=http://addons.impresscms.org]Addons[/url] section of the [url=http://www.impresscms.org]projects website[/url].
+
+You will also need to begin using [b]Blocks[/b]. You can begin by removing this block. Block administration is located under the System drop down in the administration area.
+
+For more information about working with ImpressCMS, please use the links below.
+<ul><li>[url=http://wiki.impresscms.org/index.php?title=Category:English#Using_ImpressCMS]Using ImpressCMS[/url]<li>[url=http://wiki.impresscms.org/index.php?title=Category:English#Customizing_ImpressCMS]Customizing ImpressCMS[/url]</li><li>[url=http://wiki.impresscms.org/index.php?title=Category:English#Developing_for_ImpressCMS]Developing for ImpressCMS[/url]</li></ul>
+We warmly invite you to join [url=http://community.imprescms.org]The ImpressCMS Community[/url] where you will be able to participate to this great project, post questions, get hep, help others. etc...
