@@ -144,9 +144,30 @@ function make_data(&$dbm, &$cm, $adminname, $adminpass, $adminmail, $language, $
             $dbm->insert("group_permission", " VALUES (0, ".$gruops['XOOPS_GROUP_ANONYMOUS'].", ".$newbid.", 1, 'block_read')");
         }
     }
+	// adding welcome custom block visible for webmasters
+    $welcome_webmaster_filename = 'language/' . $language . '/welcome_webmaster.tpl';
+    if (!file_exists($welcome_webmaster_filename)) {
+    	$welcome_webmaster_filename = 'language/english/welcome_webmaster.tpl';
+    }
+    if ($fp = fopen($welcome_webmaster_filename, 'r')) {
+    	$tplsource = fread($fp, filesize('language/' . $language . '/welcome_webmaster.tpl'));
+    	fclose($fp);
+		$newbid = $dbm->insert('newblocks', " VALUES (0, 1, 0, '', 'Custom Block (Auto Format + smilies)', '" . addslashes(WELCOME_WEBMASTERS) . "', '" . addslashes($tplsource) . "', 4, 0, 1, 'C', 'S', 1, '', '', '', '', '', 0, ".$time.")");
+		$dbm->insert("group_permission", " VALUES (0, ".$gruops['XOOPS_GROUP_ADMIN'].", ".$newbid.", 1, 'block_read')");
+    }
+	// adding welcome custom block visible for anonymous
+    $welcome_anonymous_filename = 'language/' . $language . '/welcome_anonymous.tpl';
+    if (!file_exists($welcome_anonymous_filename)) {
+    	$welcome_anonymous_filename = 'language/english/welcome_anonymous.tpl';
+    }
+    if ($fp = fopen($welcome_anonymous_filename, 'r')) {
+    	$tplsource = fread($fp, filesize('language/' . $language . '/welcome_anonymous.tpl'));
+    	fclose($fp);
+		$newbid = $dbm->insert('newblocks', " VALUES (0, 1, 0, '', 'Custom Block (Auto Format + smilies)', '" . addslashes(WELCOME_ANONYMOUS) . "', '" . addslashes($tplsource) . "', 4, 0, 1, 'C', 'S', 1, '', '', '', '', '', 0, ".$time.")");
+		$dbm->insert("group_permission", " VALUES (0, ".$gruops['XOOPS_GROUP_ANONYMOUS'].", ".$newbid.", 1, 'block_read')");
+    }
 
     // data for table 'users'
-
     $temp = md5($adminpass);
     $regdate = time();
     //$dbadminname= addslashes($adminname);
