@@ -12,7 +12,9 @@ ImpressCMS ChangeLog
 - Added : Addition of the danish flag (anderssk)
 - Added : Addition of the persian flag (malanciault)
 - Added : definitions for ul and li in impresstheme (McDonald/snow/malanciault)
-- Added : New module added in admin: ImpressCMS Version Checker (malanciault/nekro)
+- Added : New module added in admin: ImpressCMS Version Checker (malanciault/nekro/MrTheme/davidl2)
+- Added : A new Welcome custom block is now added by the install wizard to welcome the "not-yet-loged" user on the new site (malanciault/MrTheme/davidl2)
+- Added : A new Welcome custom block is now added by the install wizard to welcome the webmaster when loged in and to remind him some useful links to start his new ImpressCMS website (malanciault/MrTheme/davidl2)
 
 =========================================
 2008-02-24 : ImpressCMS 1.0 "Janus" RC 2
